--- a/src/main/java/BilCreateForm.form
+++ b/src/main/java/BilCreateForm.form
@@ -27,7 +27,9 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="374" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="299" max="-2" attributes="0"/>
+              <Component id="btn_reset1" min="-2" pref="63" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="btn_reset" min="-2" pref="63" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btn_save" max="32767" attributes="0"/>
@@ -83,6 +85,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btn_reset" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                   <Component id="btn_save" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                  <Component id="btn_reset1" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
           </Group>
@@ -218,6 +221,23 @@
         </Property>
         <Property name="text" type="java.lang.String" value="NEW BILL"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btn_reset1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="66" green="66" red="66" type="rgb"/>
+        </Property>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="12" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Back"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_reset1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
